# knowledge_system

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_Knowledge.md  README_LearnEngine.md  README_PreProcess.md  config.json
docs/: Embedding模型讲解.md  RAG十大误区和提高准确率.md  README.md  Reranker模型讲解.md  向量数据库原理讲解.md  数据结构化清洗详细讲解.md  知识图谱制作和使用.md
include/common/: config.h  logging.h  utils.h
include/engine/: llama_model.h  model_interface.h
include/extractor/: extractor_base.h  extractor_manager.h  ml_extractor.h  rule_based_extractor.h
include/knowledge/: entity.h  knowledge_graph.h  relation.h  triple.h
include/preprocessor/: chinese_tokenizer.h  document_loader.h  metadata_extractor.h  preprocessing_pipeline.h  text_cleaner.h  text_splitter.h
include/query/: answer_generator.h  dialogue_manager.h  graph_searcher.h  query_manager.h  query_parser.h
include/storage/: advanced_cache.h  backup_manager.h  batch_operations.h  mysql_connection_pool.h  mysql_storage.h  storage_cache.h  storage_factory.h  storage_interface.h  storage_manager.h  version_control.h
include/vectorizer/: tfidf_vectorizer.h  vectorizer.h
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  config.cpp  logging.cpp  utils.cpp
src/engine/: CMakeLists.txt  engine_integration.cpp  llama_model.cpp  model_interface.cpp
src/extractor/: CMakeLists.txt  extractor_manager.cpp  ml_extractor.cpp  rule_based_extractor.cpp
src/knowledge/: CMakeLists.txt  entity.cpp  knowledge_graph.cpp  relation.cpp  triple.cpp
src/preprocessor/: CMakeLists.txt  chinese_tokenizer.cpp  document_loader.cpp  metadata_extractor.cpp  preprocessing_pipeline.cpp  text_cleaner.cpp  text_splitter.cpp
src/query/: CMakeLists.txt  answer_generator.cpp  dialogue_manager.cpp  graph_searcher.cpp  query_manager.cpp  query_module_test.cpp  query_parser.cpp
src/storage/: CMakeLists.txt  advanced_cache.cpp  backup_manager.cpp  batch_operations.cpp  mysql_connection_pool.cpp  mysql_storage.cpp  storage_cache.cpp  storage_factory.cpp  storage_manager.cpp  version_control.cpp
src/vectorizer/: CMakeLists.txt  tfidf_vectorizer.cpp  vectorizer.cpp
tests/: CMakeLists.txt  config_test.cpp  model_test.cpp  test_chinese_tokenizer.cpp  test_metadata_extractor.cpp  test_ml_extractor.cpp  test_mysql_storage.cpp  test_preprocessing_pipeline.cpp  test_query.cpp  test_storage_manager.cpp  test_text_cleaner.cpp  test_text_splitter.cpp
